--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,41 @@
+*{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  color: black;
+  
+
+}
+
 body {
   padding-top: 50px;
+
+}
+
+.form-style{
+  position:absolute;
+    top: 50%;
+    left: 50%;
+    width: 46rem;
+    padding: 4rem;
+    transform: translate(-50%, -50%);
+    background: #eee8ce;
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 10px;
+
+}
+
+
+.row-style{
+  padding: 10px;
+  background-color: #eee8ce;
 }
 
 .spacer {
   margin-top: 2%;
   margin-bottom: 2%;
+  position: absolute;
 }
 
 .block {
@@ -26,3 +57,4 @@ body {
   right: 0;
   margin: auto;
 }
+
