--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -8,8 +8,13 @@
     margin: auto;
     margin-top: 60px;
     border-radius: 12px;
-    border: 1px solid black;
     
- 
-    
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
+   
+}
+
+.conteudo h1{
+    text-align: center;
 }
