--- a/src/components/Create/create.css
+++ b/src/components/Create/create.css
@@ -4,9 +4,6 @@ body {
     padding: 0;
     font-family: sans-serif;
     color: black;
-   
-    
-    
   
   }
 
@@ -21,7 +18,10 @@ body {
     margin: auto;
     margin-top: 60px;
     border-radius: 12px;
-    border: 1px solid black;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
+
   
   }
 
