--- a/src/components/Create/create.css
+++ b/src/components/Create/create.css
@@ -10,24 +10,126 @@ body {
 
   
   .form-style{
-    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 40px;
-    width: 600px;
+    max-width: 600px;
     font-size: 18px;
     display: flexbox;
     margin: auto;
-    margin-top: 230px;
     border-radius: 12px;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px);
-
   
   }
 
+  /* Media query */
+@media screen and (max-width: 300px) {
+  .form_group_style {
+    font-size: 15px;
+    display: flex;
+    flex-direction: row;
+    padding: 0.6rem;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .form-style{
+    position: absolute;
+    top: 48%;
+    left: 48%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  
+
+  .row-style{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+  }
+
+  .form_label_style{
+    padding: 6px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 700px ) {
+  .form_group_style {
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    padding: 0.6rem;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .form-style{
+    position: absolute;
+    top: 42%;
+    left: 42%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  
+  .row-style{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+  }
+
+  .form_label_style{
+    padding: 6px;
+  }
+}
+
+/* @media screen and (max-width: 1024px ) {
+  .form_group_style {
+    font-size: 24px;
+    display: flex;
+    flex-direction: row;
+    padding: 0.6rem;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .form-style{
+    position: absolute;
+    top: 48%;
+    left: 48%;
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+    height: 35vh;
+  }
+
+  
+  .row-style{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+  }
+
+  .form_label_style{
+    padding: 6px;
+  }
+}
+
+  
+
  
   
  
   
  
-  
+   */
